--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Giochi" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Giochi
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="Giochi">
+                          <li><a class="dropdown-item" href="#head-jumbo">Action</a></li>
+                          <li><a class="dropdown-item" href="#center-jumbo">Another action</a></li>
+                          <li><a class="dropdown-item" href="#incoming">In uscita</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Hardware" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Hardware
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="Hardware">
+                          <li><a class="dropdown-item" href="#item-selected">Playstation 5</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Servizi" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Servizi
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu" aria-labelledby="Servizi">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -64,10 +64,10 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Novità" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Novità
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu" aria-labelledby="Novità">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -75,10 +75,10 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Fai acquisti" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Fai acquisti
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu" aria-labelledby="Fai acquisti">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -86,10 +86,10 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="Supporto" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Supporto
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu" aria-labelledby="Supporto">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -99,10 +99,10 @@
                 <!-- nav bar right side + button -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pe-3" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle pe-3" href="#" id="My PlayStation" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           My PlayStation
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <ul class="dropdown-menu" aria-labelledby="My PlayStation">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -240,9 +240,11 @@
 
         <section id="incoming" class="pb-5">
             <div class="container">
-                <h2 class="pt-5 pb-2">Nuove uscite</h2>
-                <h3 class="pb-3">Giochi incredibili per PS4 e PS5 disponibili ora</h3>
                 <div class="row gy-5">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 ">
+                        <h2 class="pt-5 pb-2">Nuove uscite</h2>
+                        <h3 class="pb-3">Giochi incredibili per PS4 e PS5 disponibili ora</h3>
+                    </div>   
                     <div class="col-6 col-sm-4 col-md-4 col-lg-2 ">
                         <img class="my_incoming-item mb-2" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <span class="">Tony Hawk's Pro Skater 1 + 2</span>
@@ -295,47 +297,48 @@
             </div>
         </section>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <h2>Esplora PlayStation 4</h2>
-                    <p class="my_caption-gray mb-5">
-                        Giochi incredibili e intrattenimento senza fine.
-                        <br> 
-                        Non c'è mai stato un momenot migliore per giocare sulla tua PS4
-                    </p>
-                </div>
-            </div>          
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                    <img class="my_ps4-item" src="img/ps4-slim-homepage-image-block.jpg" alt="">
-                    <h2 class="mb-3">PlayStation 4</h2>
-                    <span class="my_caption-gray">
-                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
-                    </span>
-                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
-                </div> 
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                    <img class="my_ps4-item" src="img/double11-202010-tw-psvr.jpg" alt="">
-                    <h2 class="mb-3">PlayStation VR</h2>
-                    <span class="my_caption-gray">
-                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
-                    </span>
-                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
-                </div>  
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4">                  
-                    <img class="my_ps4-item" src="img/dualshock-4-listing-thumb.jpg" alt="">
-                    <h2 class="mb-3">Accessori</h2>
-                    <span class="my_caption-gray">
-                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
-                    </span>
-                    <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
-                </div>              
+        <section id="explore-ps4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                        <h2>Esplora PlayStation 4</h2>
+                        <p class="my_caption-gray mb-5">
+                            Giochi incredibili e intrattenimento senza fine.
+                            <br> 
+                            Non c'è mai stato un momenot migliore per giocare sulla tua PS4
+                        </p>
+                    </div>
+                </div>          
             </div>
-        </div>
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                        <img class="my_ps4-item" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <h2 class="mb-3">PlayStation 4</h2>
+                        <span class="my_caption-gray">
+                            Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                        </span>
+                        <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
+                    </div> 
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                        <img class="my_ps4-item" src="img/double11-202010-tw-psvr.jpg" alt="">
+                        <h2 class="mb-3">PlayStation VR</h2>
+                        <span class="my_caption-gray">
+                            Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                        </span>
+                        <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
+                    </div>  
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4">                  
+                        <img class="my_ps4-item" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                        <h2 class="mb-3">Accessori</h2>
+                        <span class="my_caption-gray">
+                            Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione
+                        </span>
+                        <a class="btn btn-primary mt-3 d-table" type="button" href="#">Scopri di più</a>
+                    </div>              
+                </div>
+            </div>
+        </section>
         <section id="ps-plus-jumbo" class="split-jumbo">
             <div class="container">
                 <div class="row">
@@ -351,30 +354,31 @@
                 </div>
             </div>
         </section>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <h2>Nuovi sconti sul PlayStation Store</h2>
-                    <p class="my_caption-gray">
-                        Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
-                    </p>
+        <section id="store-sales">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                        <h2>Nuovi sconti sul PlayStation Store</h2>
+                        <p class="my_caption-gray">
+                            Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
-                    <img class="my_sale-item pb-5" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">      
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                        <img class="my_sale-item pb-5" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">      
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                        <img class="my_sale-item pb-5" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
+                        <img class="my_sale-item pb-5" src="img/playstation-store-free-to-play-spotlight.png" alt="">      
+                    </div>              
                 </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
-                    <img class="my_sale-item pb-5" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
-                </div>
-                <div class="col-12 col-sm-12 col-md-4 col-lg-4 gy-5">
-                    <img class="my_sale-item pb-5" src="img/playstation-store-free-to-play-spotlight.png" alt="">      
-                </div>              
             </div>
-        </div>
+        </section>
 
         <section id="ps-now-jumbo" class="split-jumbo">
             <div class="container">
@@ -392,26 +396,27 @@
                 </div>
             </div>
         </section>
-        
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <h2>Seguici sui social media</h2>
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
-                    <img class="my_social-logo" src="img/twitter.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
-                    <img class="my_social-logo" src="img/facebook.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
-                    <img class="my_social-logo" src="img/instagram.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
-                    <img class="my_social-logo" src="img/youtube.png" alt="">
+        <section>
+            <div class="container ">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                        <h2>Seguici sui social media</h2>
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                        <img class="my_social-logo" src="img/twitter.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                        <img class="my_social-logo" src="img/facebook.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                        <img class="my_social-logo" src="img/instagram.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 col-md-2 col-lg-2 gy-5">
+                        <img class="my_social-logo" src="img/youtube.png" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
@@ -421,7 +426,6 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <img class="footer-logo w-25" src="img/ps-footer.svg" alt="">
                         <div class="pt-5"><i class="fas fa-globe"></i> Country / Region: Italy</div>    
-
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <div class="row">
@@ -455,8 +459,17 @@
                         </div>                      
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col col-sm-12 col-md-12 col-lg-6">
+                        <img class="w-50 mt-5 mb-3" src="img/sie-logo.svg" alt="">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nobis voluptatibus quasi impedit provident ad dolore cumque aut. Accusantium, odio aut distinctio doloribus voluptates aspernatur eveniet maiores quae quas. Similique?
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
+
 
 
     </footer>
